OSSN - OPEN SOURCE SOCIAL NETWORK 4.2 

* Profile/cover photos upload are not responsive #888
* Word break on comments #895
* Almost improved x10 DB performance.
* (ajax didn't work) when delete newly created post #899
* Switch statements may only contain one default clause in OssnSitePages #897
* OssnInvites send duplicate emails #903

OSSN - OPEN SOURCE SOCIAL NETWORK 4.1 

* Support Vimeo without flash #831
* New strings for datepicker localization #835
* Fixes comments vanishing issue #837
* Stop offset calculation under unset conditons #841
* If not explicitely set, set page_limit to false #842
* Allow regular members to delete their own groups #844
* Allow admins to remove members from any group #852
* Give admin access to all settings/joinrequests pages #851
* Allow admins to edit settings of any group #850
* Allow admins to decline membership in any group #849
* Allow admins to approve members in any group #848
* Allow admins to reposition covers in any group #847
* Allow admins to upload covers in any group #846
* Allow admins to access group owner elements #845
* Don't call isMember() if no group found #853
* Pass membership to wall\templates\wall\group\item #854
* Return group update state correctly #856
* Make search users and objects faster #863
* Can not edit comments #877
* Incorrect Hyphenation in the theme GoBlue 3.0 #824
* Wall item image inline block to block #866
* Add a confirm message on album delete #870
* Show all comments on profile/cover/view #871
* v4.x newsfeed page slow due to join and order_by #863



OSSN - OPEN SOURCE SOCIAL NETWORK 4.0 RC 2

CHANGES:

* Entities of type 'changed profile/cover' should be made uneditable #672
* Smiley borders #668
* Inverted post order on timeline #666
* Cover update message mixup with profilepic
* Foto update message mixup with coverpic
* Double height header with longer sitenames #655
* Right alignment of group memberlist #658
* Commenting pic followed by text gives warnings #664